--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link  rel="icon" href="%PUBLIC_URL%/f-logo.png"   />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="author" content="Farouk Emad">
+    <meta name="keywords" content="Farouk Emad Portfolio, FaroukEmad Portfolio, Farouk Works">
+    <meta name="robots" content="index, follow">
+
+    <meta name="description" content="Welcome to my portfolio website! As a front-end developer skilled in React and various front-end technologies, I showcase my expertise, projects, and achievements here. Explore my portfolio to see examples of my work, including interactive web applications and websites. Download my CV to learn more about my qualifications and experience. Let's connect and discuss how I can help bring your ideas to life!">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,10 +33,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Farouk's Portfolio</title>
+    <style>
+      *{
+        font-family: "Poppins", sans-serif;
+        margin :0;
+        /* overflow-x: hidden; */
+        color: white;
+        max-width: 100vw;
+        scroll-behavior: smooth ;
+      }
+      
+      </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+   
     <div id="root"></div>
     <!--
       This HTML file is a template.
